// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getNotebookInfo returns the correct notebookInfo 1`] = `
Object {
  "jupyter": Object {
    "category": "ANALYSIS",
    "displayName": "Jupyter",
    "versions": Array [
      Object {
        "displayName": "Dask 2023.1/Spark 3.3.0",
        "image": "nerc/jupyterlab:ee1e157f36f5-spark-3.3.0",
      },
    ],
  },
  "jupyterlab": Object {
    "category": "ANALYSIS",
    "displayName": "JupyterLab",
    "versions": Array [
      Object {
        "displayName": "Dask 2023.1/Spark 3.3.0",
        "image": "nerc/jupyterlab:ee1e157f36f5-spark-3.3.0",
      },
    ],
  },
  "rstudio": Object {
    "category": "ANALYSIS",
    "displayName": "RStudio",
    "userSelectableVersion": true,
    "versions": Array [
      Object {
        "connectImage": "nerc/zeppelin-connect:1.2.0",
        "default": true,
        "displayName": "4.0.1",
        "image": "nerc/rstudio:4.0.1",
      },
      Object {
        "connectImage": "nerc/zeppelin-connect:1.2.0",
        "displayName": "3.5.3",
        "image": "nerc/rstudio:3.5.3",
      },
    ],
  },
  "vscode": Object {
    "category": "ANALYSIS",
    "displayName": "VS Code Server",
    "versions": Array [
      Object {
        "default": true,
        "displayName": "Miniconda3",
        "image": "nerc/vscode-server:2b96491b4620-0.0.2",
      },
    ],
  },
  "zeppelin": Object {
    "category": "ANALYSIS",
    "displayName": "Zeppelin",
    "versions": Array [
      Object {
        "connectImage": "nerc/zeppelin-connect:1.2.0",
        "displayName": "0.7.2.7",
        "image": "nerc/zeppelin:0.7.2.7",
      },
    ],
  },
}
`;

exports[`getSiteInfo returns the correct siteInfo 1`] = `
Object {
  "nbviewer": Object {
    "category": "PUBLISH",
    "displayName": "NBViewer",
    "versions": Array [
      Object {
        "displayName": "Latest",
        "image": "jupyter/nbviewer:latest",
      },
    ],
  },
  "panel": Object {
    "category": "PUBLISH",
    "displayName": "Panel",
    "userCanChooseConda": true,
    "userCanChooseFile": true,
    "versions": Array [
      Object {
        "displayName": "Dask 2023.1/Spark 3.3.0",
        "image": "nerc/jupyterlab:ee1e157f36f5-spark-3.3.0",
      },
    ],
  },
  "rshiny": Object {
    "category": "PUBLISH",
    "displayName": "RShiny",
    "userActionOverrides": Object {
      "logs": true,
    },
    "userSelectableVersion": true,
    "versions": Array [
      Object {
        "default": true,
        "displayName": "4.0.1",
        "image": "nerc/rshiny:4.0.1",
      },
      Object {
        "displayName": "3.5.3",
        "image": "nerc/rshiny:3.5.3",
      },
    ],
  },
  "streamlit": Object {
    "category": "PUBLISH",
    "userCanChooseConda": true,
    "userCanChooseFile": true,
    "versions": Array [
      Object {
        "displayName": "Dask 2023.1/Spark 3.3.0",
        "image": "nerc/jupyterlab:ee1e157f36f5-spark-3.3.0",
      },
    ],
  },
  "voila": Object {
    "category": "PUBLISH",
    "displayName": "Voila",
    "userCanChooseFile": true,
    "versions": Array [
      Object {
        "displayName": "Dask 2023.1/Spark 3.3.0",
        "image": "nerc/jupyterlab:ee1e157f36f5-spark-3.3.0",
      },
    ],
  },
}
`;

exports[`getUserActionsForType returns all as true if cannot find type 1`] = `
Object {
  "copySnippets": true,
  "delete": true,
  "edit": true,
  "logs": true,
  "restart": true,
  "scale": true,
  "share": true,
}
`;

exports[`getUserActionsForType returns to match snapshot for site type with logs userActionOverrides 1`] = `
Object {
  "copySnippets": true,
  "delete": true,
  "edit": true,
  "logs": true,
  "restart": true,
  "scale": true,
  "share": true,
}
`;

exports[`getUserActionsForType returns to match snapshot for site type with no logs userActionOverrides 1`] = `
Object {
  "copySnippets": true,
  "delete": true,
  "edit": true,
  "logs": false,
  "restart": true,
  "scale": true,
  "share": true,
}
`;
